  file, it gets the file from module sys every time by name; this means
  logging will use new sys.stdout (or stderr) in case the user changed
  them.

* Changed the order of testing of SQLite modules - look for external
  PySQLite2 before sqlite3.

SQLObject 0.10.7
================

* Fixed a bug: Sybase tables with identity column fire two identity_inserts.

SQLObject 0.10.6
================

Released 18 May 2009

* Better support for Python 2.6: do not import the deprecated sets module.

* A number of changes ported from `SQLObject 0.9.11`_.

SQLObject 0.10.5
================

Released 6 May 2009

* A number of changes ported from `SQLObject 0.9.10`_.

* sqlmeta.getColumns() becomes classmethod.

SQLObject 0.10.4
================

Released 8 Dec 2008.

* Fixed createSQL constrains generation under MySQL when the table's name
  includes the database's name (contains a dot).

SQLObject 0.10.3
================

Released 1 Dec 2008.

* A number of changes ported from `SQLObject 0.9.8`_.

SQLObject 0.10.2
================

Released 30 May 2008.

* A number of changes ported from `SQLObject 0.9.7`_.

SQLObject 0.10.1
================

Released 4 May 2008.

* Fixed a bug: limit doesn't work in sqlbuilder.Select.

* A number of changes ported from `SQLObject 0.9.6`_.

SQLObject 0.10.0
================

Released 11 Mar 2008.

Features & Interface
--------------------

* Dropped support for Python 2.2. The minimal version of Python for
  SQLObject is 2.3 now.

* Removed actively deprecated attributes;
  lowered deprecation level for other attributes to be removed after 0.10.

* SQLBuilder Select supports the rest of SelectResults options (reversed,
  distinct, joins, etc.)

* SQLObject.select() (i.e., SelectResults) and DBConnection.queryForSelect()
  use SQLBuilder Select queries; this make all SELECTs implemented
  internally via a single mechanism.

* SQLBuilder Joins handle SQLExpression tables (not just str/SQLObject/Alias)
  and properly sqlrepr.
